comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius suscipit porro ipsa laborum mollitia. Dolore quae cum minima, numquam optio eos, consectetur a dignissimos quos labore beatae impedit ratione officiis?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe eos quisquam quasi est necessitatibus, reprehenderit iure vero accusamus repudiandae quibusdam rerum natus, ipsum aut magnam laborum iste earum labore expedita!</p>
         </article>
     </main>
     
